# arc_str_perf

./: Cargo.toml  Jemallocator.txt  README.md  comparison.txt  comparison_data.csv  comparison_data.json  comparison_data.jsonl  output.txt  run.sh  to_csv.py
benches/: arc_str.rs
src/: main.rs
