[package]
name = "arc_str_perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
num-format = "0.4.4"
tikv-jemalloc-ctl = "0.5.4"
tikv-jemallocator = "0.5.4"

[dev-dependencies]
loom = "0.7.1"
